--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http-server": "^0.12.3",
     "http-status-codes": "^2.1.4",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.9",
     "mongoose": "^5.11.17",
     "mongoose-seed": "^0.6.0",
     "node-sass": "^5.0.0",
